Added Functions and Comments

--- a/data_analysis_logs.ipynb
+++ b/data_analysis_logs.ipynb
@@ -24,7 +24,6 @@
     "import scipy.stats as st \n",
     "import tqdm\n",
     "import pickle\n",
-    "import csv\n",
     "\n",
     "plt.rcParams['figure.dpi'] = 200\n",
     "plt.rcParams['savefig.dpi'] = 600\n",
@@ -50,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get All dfs of a Drug"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -69,38 +75,58 @@
     "    \n",
     "    drug_loc = []\n",
     "    \n",
+    "    # Iterate over every job in the directory \n",
     "    for job in os.listdir(path):\n",
     "        curr = os.path.join(path, job)\n",
     "        \n",
+    "        # Check if current job is in the wanted_jobs list \n",
     "        if job in wanted_jobs:\n",
     "            print(f\"----------{job}----------\")\n",
     "            samples_rmse_curr = {}\n",
     "            \n",
+    "            # Iterates over every model in the job\n",
     "            for model in tqdm.tqdm(os.listdir(curr)):\n",
     "                inner = os.path.join(curr, model)\n",
     "                \n",
+    "                # Iterates over every file within the model \n",
     "                for subdir, dirs, files in os.walk(inner):\n",
     "                    for file in files:\n",
+    "                        \n",
+    "                        # Creates dataframe\n",
     "                        f = os.path.join(subdir, file)\n",
     "                        df = pd.read_csv(f, sep=\"\\t\")\n",
     "                        \n",
+    "                        # Gets drug\n",
     "                        drug = df[\"Drug1\"][0]\n",
     "                        fold_num = subdir.split(\"/\")[-1]\n",
+    "                        \n",
+    "                        # Checks to see if drug is the same as wanted drug\n",
     "                        if drg == drug:\n",
     "                            drug_loc.append((job, fold_num))\n",
     "\n",
     "    dfs = []\n",
     "    locs = []\n",
+    "    \n",
+    "    # Iterates over all the found locations of the drg TSVs\n",
     "    for j,folder in drug_loc:\n",
     "\n",
     "        file = os.path.join(os.path.join(os.path.join(path, j), folder), \"predicted.tsv\")\n",
     "\n",
+    "        # Make a dataframe and include a new column with what job it is from\n",
     "        df = pd.read_csv(file, sep=\"\\t\")\n",
     "        df[\"Job\"] = j\n",
+    "        \n",
     "        locs.append((j,folder))\n",
     "        dfs.append(df)\n",
     "\n",
     "    return dfs, locs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Combined Dataframes of All Drugs into a Dictionary"
    ]
   },
   {
@@ -151,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make a Multiplot of Distribution of Drug in Specified Jobs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -161,13 +194,14 @@
     "    drug_dfs, drug_jobs = get_all_drug_dfs(drg=drg, path=path, wanted_jobs=wanted_jobs)\n",
     "    \n",
     "    \n",
-    "    \n",
+    "    # Get grid layout\n",
     "    N = len(drug_dfs)\n",
     "    x=np.floor(np.sqrt(N))\n",
     "    y=np.ceil(N/x)\n",
     "    \n",
     "    print(f\"TOTAL: {N}-----({x, y})\")\n",
     "    \n",
+    "    # Make Subplots\n",
     "    fig, ax1 = plt.subplots(int(x), int(y), squeeze=False)\n",
     "    fig.subplots_adjust(hspace=0.4, wspace = 0.45)\n",
     "    fig.suptitle(f\"Distribution of {drg} over all Individual Jobs\")\n",
@@ -175,6 +209,7 @@
     "    k = 0\n",
     "    j = 0\n",
     "\n",
+    "    # Iterate over all subplots and plot each distribution for every specified job\n",
     "    for i, d in enumerate(drug_dfs):\n",
     "\n",
     "        d[\"AUCError\"].plot.kde(ax=ax1[k][j], \n",
@@ -263,6 +298,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make A distribution Plot of a given Drug"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -270,8 +312,10 @@
    "source": [
     "def make_distrib_plot(drg, d_dict):\n",
     "    \n",
+    "    # Get dataframe for specified drug\n",
     "    drug_df = d_dict[drg]\n",
     "    \n",
+    "    # Plot Distribution \n",
     "    fig, ax1 = plt.subplots()\n",
     "    \n",
     "    drug_df[\"AUCError\"].plot.kde(ax=ax1, \n",
@@ -307,11 +351,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bootstrap RMSE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def boostraped_rmse(df, B): \n",
+    "    \"\"\"Create Bootsrtap sample of a statistic\n",
+    "\n",
+    "    Args:\n",
+    "        x (num): values you want infrence from \n",
+    "        B (in): Number of bootstrap samples\n",
+    "        statsFun (fun): metric you want infrence on \n",
+    "    \"\"\"\n",
+    "    x_auc = df[\"AUC\"]\n",
+    "    x_pred_auc = df[\"PredictedAUC\"]\n",
+    "    x_auc = np.array(x_auc)\n",
+    "    x_pred_auc = np.array(x_pred_auc)\n",
+    "    \n",
+    "    resampled_stat = []\n",
+    "    \n",
+    "    for b in tqdm.tqdm(range(B)):\n",
+    "        index = np.random.randint(0, len(x_auc), len(x_auc))\n",
+    "        sample_auc = x_auc[index]\n",
+    "        sample_pred_auc = x_pred_auc[index]\n",
+    "        \n",
+    "        bstatistic = mean_squared_error(sample_auc, sample_pred_auc, squared=False)\n",
+    "        resampled_stat.append(bstatistic)\n",
+    "        \n",
+    "    return np.array(resampled_stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100000/100000 [00:07<00:00, 12776.75it/s]\n"
+     ]
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig, ax = plt.subplots()\n",
+    "# confint = st.t.interval(confidence = 0.95, \n",
+    "#                         df = len(test)-1, \n",
+    "#                         loc = np.mean(test), \n",
+    "#                         scale = st.sem(test) )\n",
+    "\n",
+    "# heights, bins, patches = ax.hist(test, bins=30, rwidth=0.9)\n",
+    "# ax.vlines(x = np.mean(test), \n",
+    "#           ymin = 0, \n",
+    "#           ymax=12000, \n",
+    "#           colors=\"black\", \n",
+    "#           linestyles=\"dashed\")\n",
+    "\n",
+    "# ax.set_title(f\"Bootstrapped Estimate of AUC Error for Drug 988\\nAll Jobs\")\n",
+    "# ax.set_ylabel(\"Bootstrap Sampes\")\n",
+    "# ax.set_xlabel(\"AUC Error\")\n",
+    "# ax.text(x = min(test), y = 12000, s = confint, size = 8)\n",
+    "# ax.fill_betweenx([0, heights.max()],confint[0], confint[1], alpha = 0.1, color = \"g\")"
+   ]
   }
  ],
  "metadata": {
